assets/*: change heading styling so can be used for h2 as well as h1, add min width to stock table and update wine image to ensure centered on mobile

--- a/wine_cellar/assets/css/forms.css
+++ b/wine_cellar/assets/css/forms.css
@@ -30,7 +30,7 @@
 }
 
 .form-subhead {
-  font-size: var(--font-lg);
+  font-size: var(--font-xl);
   margin: 20px 0 10px 0;
   font-weight: 300;
   color: #333;
