--- a/wine_cellar/assets/css/styles.css
+++ b/wine_cellar/assets/css/styles.css
@@ -17,8 +17,8 @@
     --font-xs: 0.8rem;
     --font-sm: 1rem;
     --font-md: 1.25rem;
-    --font-lg: 2rem;
-    --font-xl: 3rem;
+    --font-lg: 1.75rem;
+    --font-xl: 2rem;
     --border-radius: 10px;
     --container-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
